--- a/Aprendizaje_no_supervisado.ipynb
+++ b/Aprendizaje_no_supervisado.ipynb
@@ -802,17 +802,21 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "c7b6ed85-1243-453f-9dad-3b08df8c20fd",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39f8f3e7-0c8e-43ae-b54f-ee24f4eb3c4d",
    "metadata": {},
+   "outputs": [],
    "source": [
     "## Se eliminaron columnas irrelevantes para el análisis (como CustomerID) y se transformó la variable categórica ‘Gender’ en valores numéricos para que pueda ser procesada por los modelos. Luego, se normalizaron las variables para asegurar que todas tengan el mismo peso al momento de aplicar los algoritmos de clustering."
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "67647885-29ce-49b2-9cfb-bdb5797a9f43",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95e3030c-53d9-468e-bf72-69534db1eee0",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# 3 seleccion de caracteristicas "
    ]
@@ -853,9 +857,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "8c4fff1b-ccbe-4627-a4bb-27a8ed618bb7",
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "61aa459b-1766-4398-85dc-457360c5b561",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Se evaluó la correlación entre las variables y se seleccionaron aquellas con mayor aporte para la segmentación de clientes. En este caso, se utilizaron las variables Annual Income (k$) y Spending Score (1-100) por su fuerte relación con el comportamiento de compra y su utilidad para una visualización clara de los clusters. También se preparó una versión normalizada del conjunto completo para pruebas más avanzadas."
    ]
@@ -968,11 +974,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "849fa003-dd57-4531-8f8e-09c5898c461a",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66c72d0c-898f-438a-a6e2-a80b51d35e89",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "El modelo logra una segmentación útil para estrategias de marketing personalizadas. Por ejemplo, se pueden diseñar promociones específicas para cada grupo según sus patrones de ingreso y gasto."
+    "# El modelo logra una segmentación útil para estrategias de marketing personalizadas. Por ejemplo, se pueden diseñar promociones específicas para cada grupo según sus patrones de ingreso y gasto."
    ]
   },
   {
@@ -1004,9 +1012,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "27f81d2f-1131-4219-bfe1-392b52acca09",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b98debe1-4b56-491c-a98c-360d52a94e58",
    "metadata": {},
+   "outputs": [],
    "source": [
     "## Se utilizó el método del codo para determinar el número óptimo de clusters, identificando que 5 agrupaciones ofrecen un buen equilibrio entre precisión y simplicidad. Se entrenó el modelo K-means con estos 5 grupos, lo que permitió identificar patrones de comportamiento distintos entre los clientes, según su ingreso y nivel de gasto. Se visualizó cada cluster con sus respectivos centroides."
    ]
@@ -1072,19 +1082,21 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "44f705e1-e0d8-4146-b220-ccddcb9fba28",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d4b9597-7d93-487c-82d7-2cf994ac3272",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "1. Coeficiente de Silhouette (0.554):\n",
-    "\t•\tEste valor indica qué tan bien están definidos los clusters.\n",
-    "\t•\tValores cercanos a 1 indican una buena separación entre clusters y que los puntos están bien agrupados.\n",
-    "\t•\tUn valor de 0.554 es moderadamente bueno, lo que sugiere que los clusters están bien separados pero podría haber algo de solapamiento entre algunos grupos.\n",
+    "#1. Coeficiente de Silhouette (0.554):\n",
+    "#\t•\tEste valor indica qué tan bien están definidos los clusters.\n",
+    "#\t•\tValores cercanos a 1 indican una buena separación entre clusters y que los puntos están bien agrupados.\n",
+    "#\t•\tUn valor de 0.554 es moderadamente bueno, lo que sugiere que los clusters están bien separados pero podría haber algo de solapamiento entre #algunos grupos.\n",
     "\n",
-    "2. Índice de Calinski-Harabasz (247.359):\n",
-    "\t•\tEsta métrica evalúa la densidad y separación de los clusters.\n",
-    "\t•\tCuanto más alto, mejor es la calidad del agrupamiento.\n",
-    "\t•\tUn valor de 247.359 indica que los clusters están razonablemente bien separados y compactos. Es una buena señal del desempeño del modelo."
+    "#2. Índice de Calinski-Harabasz (247.359):\n",
+    "#\t•\tEsta métrica evalúa la densidad y separación de los clusters.\n",
+    "#\t•\tCuanto más alto, mejor es la calidad del agrupamiento.\n",
+    "#\t•\tUn valor de 247.359 indica que los clusters están razonablemente bien separados y compactos. Es una buena señal del desempeño del modelo."
    ]
   },
   {
@@ -1174,26 +1186,28 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "d0c5f239-dab5-41d4-8026-e586e6e1f935",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "561098c8-d7ce-45fc-ba5c-be4c23601abf",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "En la gráfica se observan los centroides de los cinco clústeres identificados. Cada punto amarillo representa el centro de un grupo de clientes, según su Ingreso Anual (k$) y su Puntaje de Gasto (1–100). Estos centroides nos permiten interpretar comportamientos típicos dentro de cada grupo:\n",
-    "\t1.\tClientes con bajo ingreso y bajo gasto:\n",
-    "\t•\tBajo poder adquisitivo y poco interés en gastar.\n",
-    "\t•\tEs posible que no sean un público objetivo prioritario.\n",
-    "\t2.\tClientes con alto ingreso y bajo gasto:\n",
-    "\t•\tAunque tienen capacidad económica, no gastan mucho.\n",
-    "\t•\tPodrían representar una oportunidad para estrategias de marketing.\n",
-    "\t3.\tClientes con ingreso medio y gasto medio:\n",
-    "\t•\tPerfil promedio, comportamiento equilibrado.\n",
-    "\t•\tPueden representar la mayoría de los clientes.\n",
-    "\t4.\tClientes con bajo ingreso y alto gasto:\n",
-    "\t•\tGastan mucho pese a tener ingresos bajos.\n",
-    "\t•\tPosible foco para promociones o fidelización.\n",
-    "\t5.\tClientes con alto ingreso y alto gasto:\n",
-    "\t•\tSegmento más rentable.\n",
-    "\t•\tIdeal para programas de fidelización VIP o productos premium."
+    "# En la gráfica se observan los centroides de los cinco clústeres identificados. Cada punto amarillo representa el centro de un grupo de clientes, #según su Ingreso Anual (k$) y su Puntaje de Gasto (1–100). Estos centroides nos permiten interpretar comportamientos típicos dentro de cada grupo:\n",
+    "#\t1.\tClientes con bajo ingreso y bajo gasto:\n",
+    "#\t•\tBajo poder adquisitivo y poco interés en gastar.\n",
+    "#\t•\tEs posible que no sean un público objetivo prioritario.\n",
+    "#\t2.\tClientes con alto ingreso y bajo gasto:\n",
+    "#\t•\tAunque tienen capacidad económica, no gastan mucho.\n",
+    "#\t•\tPodrían representar una oportunidad para estrategias de marketing.\n",
+    "#\t3.\tClientes con ingreso medio y gasto medio:\n",
+    "#\t•\tPerfil promedio, comportamiento equilibrado.\n",
+    "#\t•\tPueden representar la mayoría de los clientes.\n",
+    "#\t4.\tClientes con bajo ingreso y alto gasto:\n",
+    "#\t•\tGastan mucho pese a tener ingresos bajos.\n",
+    "#\t•\tPosible foco para promociones o fidelización.\n",
+    "#\t5.\tClientes con alto ingreso y alto gasto:\n",
+    "#\t•\tSegmento más rentable.\n",
+    "#\t•\tIdeal para programas de fidelización VIP o productos premium."
    ]
   },
   {
@@ -1284,20 +1298,22 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "18c71bf9-c5ee-4492-92fb-65eb154c0ee2",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbf1151d-0881-4ffa-85a8-e6e5b0671c1e",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "1.\tSegmentación clara de los clientes del mall:\n",
-    "\t•\tEl gráfico representa 5 grupos de clientes distintos (clusters) basados en su ingreso anual (eje X) y su puntaje de gasto (eje Y).\n",
-    "2.\tInterpretación de cada grupo:\n",
-    "\t•\tCluster 1 (rojo): Ingresos altos pero bajo puntaje de gasto.\n",
-    "\t•\tCluster 2 (azul): Ingresos medios y puntaje de gasto medio.\n",
-    "\t•\tCluster 3 (verde): Ingresos altos y alto puntaje de gasto (clientes ideales para el negocio).\n",
-    "\t•\tCluster 4 (morado): Ingresos bajos pero alto puntaje de gasto (pueden ser compradores impulsivos).\n",
-    "\t•\tCluster 5 (naranja): Ingresos bajos y bajo puntaje de gasto (clientes menos rentables).\n",
-    "3.\tAplicación del análisis:\n",
-    "\t•\tEsta segmentación es útil para diseñar estrategias de marketing personalizadas, como promociones, fidelización o reorientación de esfuerzos hacia los clientes más rentables."
+    "# 1.\tSegmentación clara de los clientes del mall:\n",
+    "#   •\tEl gráfico representa 5 grupos de clientes distintos (clusters) basados en su ingreso anual (eje X) y su puntaje de gasto (eje Y).\n",
+    "# 2.\tInterpretación de cada grupo:\n",
+    "#   •\tCluster 1 (rojo): Ingresos altos pero bajo puntaje de gasto.\n",
+    "#   •\tCluster 2 (azul): Ingresos medios y puntaje de gasto medio.\n",
+    "#\t•\tCluster 3 (verde): Ingresos altos y alto puntaje de gasto (clientes ideales para el negocio).\n",
+    "#\t•\tCluster 4 (morado): Ingresos bajos pero alto puntaje de gasto (pueden ser compradores impulsivos).\n",
+    "#\t•\tCluster 5 (naranja): Ingresos bajos y bajo puntaje de gasto (clientes menos rentables).\n",
+    "# 3.\tAplicación del análisis:\n",
+    "#\t•\tEsta segmentación es útil para diseñar estrategias de marketing personalizadas, como promociones, fidelización o reorientación de esfuerzos #hacia los clientes más rentables.\n"
    ]
   },
   {
